[package]
name = "ibm-pc-xt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27.0"
png = "0.17.13"
rand = "0.8.5"
ron = "0.8.1"
vulkano = { version = "0.34.1", features = ["macros"] }
vulkano-macros = "0.34.0"
vulkano-shaders = { version = "0.34.0" }
vulkano-util = "0.34.1"
winit = "0.29.15"
